--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <center> <div class="container-fluid  ">
         <div class="row ">
             <div class="   col-6 pl-3  ">
-                <span ><h4 class="chat" >Chat With Us</h4></span><a href="what.html"><img src="/images/social.png" class="img-fluid whatsapp " alt="TIC-FIBER CLICK TO SEE DETAILS"></a>
+                <span ><h4 class="chat" >Chat With Us</h4></span><a href="what.html"><img src="images/social.png" class="img-fluid whatsapp " alt="TIC-FIBER CLICK TO SEE DETAILS"></a>
             </div>
             <div class="col-6   ">
-                <span><h4  class="chat">Reach Our Shop</h4></span><a href="location.html"><img  src="/images/google-maps (1).png" class="img-fluid whatsapp"  alt="RAILWIRE CLICK TO SEE DETAILS"></a>
+                <span><h4  class="chat">Reach Our Shop</h4></span><a href="location.html"><img  src="images/google-maps (1).png" class="img-fluid whatsapp"  alt="RAILWIRE CLICK TO SEE DETAILS"></a>
             </div>
         </center>
         <footer style="margin-top:25px; font-size: 10px;">
