--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Blue Star Cable</title>
 </head>
 <body>
     <div  data-aos="fade-up"  class="header">
