--- a/tic.html
+++ b/tic.html
@@ -42,9 +42,9 @@
         <span id="span">
           <h3>with</h3>
           <h2 id="free">
-            <img id="route" src="/images/connection.png" alt="router_img" />
+            <img id="route" src="images/connection.png" alt="router_img" />
             &ensp;<b> Free &ensp; Modem &ensp; </b
-            ><img id="route" src="/images/connection.png" alt="" /></h2
+            ><img id="route" src="images/connection.png" alt="" /></h2
         ></span>
       </h1>
     </div>
